--- a/package.json
+++ b/package.json
@@ -57,7 +57,7 @@
     "@ethersproject/abi": "^5.7.0",
     "@hashflow/sdk": "^2.2.7",
     "@hashflow/taker-js": "^0.4.1",
-    "@paraswap/core": "2.4.0",
+    "@paraswap/core": "2.4.1-pool-identifiers-tracking.0",
     "@types/ws": "^8.5.12",
     "async": "^3.2.4",
     "axios": "0.27.2",
